[package]
name = "yogurt"
version = "0.1.1"
edition = "2021"
description = "A simple command system"
readme = "README.md"
repository = "https://github.com/Treesoid/yogurt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
fnv = "1.0.7"
